<?xml version="1.0"?>
<package format="3">
  <name>qp_tutorial</name>
  <version>0.0.1</version>
  <description>qp_tutorial</description>

  <maintainer email="pjsyukizang@naver.com">park jun seo</maintainer>
  <license>Apache 2.0</license>

  <author email="pjsyukizang@naver.com">park jun seo</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rosgraph_msgs</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
